--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,10 @@
         "psr-4": {
             "PragmaGoTech\\Interview\\": "src/"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5",
+        "friendsofphp/php-cs-fixer": "^3.13",
+        "squizlabs/php_codesniffer": "^3.7"
     }
 }
